--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,9 +3,9 @@
   <div>
     <p><%= post.title %></p>
     <p><%= post.content %></p>
-<!--     <span>
+    <span>
       <%= link_to "show post", post_path(post)%>
-    </span> -->
+    </span> 
   </div>
 </div>
 <% end %>
