--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,23 +1,20 @@
-<div class="row">
+<div class "row">
   <div class="col-md-8 well">
-    <h3><%= @post.title %></h3>
+    <h3><%= @post.title%></h3>
     <p>
-      <%= @post.content %>
+      <%= @post.content%>
     </p>
-    <br>
   </div>
 </div>
 
-<% @post.comments.each do |comment| %>
-  <div class="row">
-    <div class='col-md-1 well text-center'>
-    </div>
-
-    <div class="col-md-6 well">
-      <p>
-        <%= comment.content %>
-      </p>
-      <br>
-    </div>
+<% @post.comments.each do |comment|%>
+  <div class="col-md-6 well">
+    <p>
+      <%= comment.content%>
+    </p>
   </div>
 <% end %>
+
+<br>
+<br>
+<%= link_to 'go back to all posts', posts_path %>
