--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,24 +6,20 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <% if logged_in? %>
-          <!-- <li><%= link_to "Welcome! #{current_user.name}"%></li> -->
           <li><%= link_to 'New Post', new_post_path %></li>
-          <!-- <li><%= link_to 'Logout', logout_path %></li> -->
         <% else %>
           <li><%= link_to 'Register', register_path %></li>
-          <!-- <li><%= link_to 'Login', login_path %></li> -->
          <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li class="dropdown">
-            <%= link_to '#', class: 'dropdown-toggle', 'data-toggle' => 'dropdown' do %>
-            <%= current_user.name %> <span class='caret'></span>
-            <% end %>
-            <ul class="dropdown-menu">
-              <li><%= link_to 'User Profile', user_path(current_user) %></li>
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"><%=  "#{current_user.name}" %> 
+              <span class="caret"></span></button>
+              <ul class="dropdown-menu">
+              <li><a href="#"><%= link_to 'User Profile', user_path(current_user) %></li>
               <li role="separator" class="divider"></li>
-              <li><%= link_to 'Logout', logout_path %></li>
+              <li><a href="#"><%= link_to 'Logout', logout_path %></li>
             </ul>
           </li>
         <% else %>
