--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,8 +1,8 @@
 <% if category.name == 'Ruby' %>
   <span class='badge alert-danger'>
-<% elsif category.name == 'Funny' %>
-  <span class='badge alert-success'>
 <% elsif category.name == 'News' %>
+  <span class='badge alert-success'>
+<% elsif category.name == 'Embedded' %>
   <span class='badge progress-bar-info'>
 <% elsif category.name == 'Javascript' %>
   <span class='badge progress-bar-warning'>
